--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,21 @@
 html, body {
     height: 100%;
+    background-color: #000;
+    background-image: url("images/bg.png");
 }
 
-.container {
+.loading-container {
     position: relative;
     top: 50%;
     transform: translateY(-100%);
     text-align: center;
+}
+
+.container {
+    background-color: #a9abad;
+}
+
+
+.movie {
+    width: 20%;
 }
