--- a/public/style.css
+++ b/public/style.css
@@ -18,6 +18,8 @@ html, body {
 .page-container {
     background-color: rgba(0,0,0,0.0);
     width: 100%;
+    padding-top: 120px;
+    height: 100%;
 }
 
 .movie {
@@ -39,7 +41,9 @@ html, body {
 
 
 .menu-left {
+    padding-top: 55px;
     background-color: rgba(0,0,0,0.5);
+    height: 100%;
 }
 
 .movie img {
@@ -53,6 +57,7 @@ html, body {
 }
 .movie img:hover {
     border: 2px solid #BA8043;
+    opacity: 0.9;
 }
 
 .movie-title {
